<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fffff1"
    tools:context=".home">


    <Button

        android:id="@+id/send"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_margin="10dp"
        android:background="@drawable/rounded_btn"
        android:text="@string/send_btn"
        android:textColor="#000"
        android:textSize="20sp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <Button
            android:id="@+id/inztructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:background="@drawable/rectangle_btn"
            android:text="@string/instruction_btn"
            android:textColor="#000"
            android:textSize="20sp" />


        <Button
            android:id="@+id/register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/inztructions"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:background="@drawable/rectangle_btn"
            android:text="@string/register_btn"
            android:textColor="#000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/womensafetytips"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/register"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:background="@drawable/rectangle_btn"
            android:text="@string/safety_tips_btn"
            android:textColor="#000"
            android:textSize="20sp" />

        <Button
            android:id="@+id/escape_from_threat"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/womensafetytips"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:background="@drawable/rectangle_btn"
            android:text="@string/escape_tips_btn"
            android:textColor="#000"
            android:textSize="20sp" />


        <Button
            android:id="@+id/self_defence_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/escape_from_threat"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:background="@drawable/rectangle_btn"
            android:text="@string/video_self_defence"
            android:textColor="#000"
            android:textSize="20sp" />


    </RelativeLayout>


</RelativeLayout>